# auth-app-rs

./: .dockerignore  .env  .env.sample  .envrc  Cargo.toml  Dockerfile  README.md  build.rs  sqlx-data.json
.github/workflows/: main.yml
.sqlx/: query-0e805cf1a5753cf3e2c75a055304e338732154bfa7185749666fd45f5eb9132a.json  query-2de06d9a96ceb20214146a61d4603d49fabce9c47fc74818d35e605fafacfb2b.json  query-39e60f986c3ece4b44ecc89f6c41af6eacb9ba767ea4e8ab9c50c6fc2f093d84.json  query-4759e7b94937e333b5e36c75165f0dc829c08ceef392e3cd099d26629674707a.json  query-5ec885b0ae097fa6faa38413ca405807872665a2a8039ebf28ab4aa0a6a1e6c8.json  query-7e4ea2217f3f3bbd3cd2fc3c890bfdb82ace11f40a57a6e4b7137a68eaefe46b.json  query-96296e7d6f70c9f7e18e2942201e00ae403a7406795e516ae4573a69a24cab94.json  query-cd8b940f34b996a8085a22f3bb64895921d1790577ed5c25cdd92cef34a0ed17.json  query-cf5bc61a716d79709ba19da2f5a6d74795ff798090cfb8379b75ffbf55605458.json  query-e868ee605390ae17774de2f63d80c69098b19832f65c70f89840fc14e360fa92.json  query-febd21f083bd3b2d4cab33c595a6a1a2748e74c34969efdbef90cf6c8f97bccf.json
migrations/: 20220418164613_auth_users.up.sql  20220418164613_user.up.sql  20220418164617_instance.up.sql  20220418164621_user_access.up.sql  20220418164624_history.up.sql  20220418164633_instance_key.down.sql  20220418164633_instance_key.up.sql  20220418175105_stripe_id_instance.down.sql  20220418175105_stripe_id_instance.up.sql  20220418175154_key_type_instance_key.down.sql  20220418175154_key_type_instance_key.up.sql  20220418175311_email_domain_instance.down.sql  20220418175311_email_domain_instance.up.sql  20220418175352_region_instance.down.sql  20220418175352_region_instance.up.sql  20220510064146_trial_pro.down.sql  20220510064146_trial_pro.up.sql  20220615192002_add_updated_at_to_instance.down.sql  20220615192002_add_updated_at_to_instance.up.sql
public/.well-known/: security.txt
public/styles/: signin.css
src/: auth.rs  errors.rs  lib.rs  main.rs  model.rs  optional_struct.rs  password.rs  user.rs  version.rs
src/auth/: token.rs
src/controllers/: instance.rs  instance_users.rs  mod.rs
src/controllers/admin/: instances_views.rs  mod.rs
src/controllers/api/: google_auth.rs  instances.rs  mod.rs  users.rs
src/controllers/internalbackstage/: health.rs  mod.rs  version.rs
src/db/: instance.rs  instance_status.rs  mod.rs  user.rs  user_access.rs
src/model/: health.rs  instance.rs  mod.rs  user.rs  version_info.rs
src/service/: user.rs
tests/: mod.rs
tests/controllers/: instance_test.rs  instance_users_test.rs  mod.rs  users_test.rs
views/admin/instance/: add-user.hbs  api-secrets.hbs  getting-started-sent.hbs  invoices.hbs  view.hbs
views/admin/instances/: assign.hbs  create.hbs  delete.hbs  edit.hbs  list.hbs  new-api-key.hbs
views/admin/settings/: create.hbs  delete.hbs  edit.hbs  list.hbs
views/auth/: forget-success.hbs  forget.hbs  no-access.hbs  reset-password-invalid.hbs  reset-password.hbs  sign-in-choose.hbs  sign-in-multiple.hbs  sign-in-single.hbs  sign-in-step1.hbs  sign-in-step2.hbs  signed-out.hbs
views/layout/: main.hbs
views/partials/: instance-header.hbs  local-time.hbs
views/user/: create.hbs  list.hbs
