[package]
edition = "2024"
name = "auth-app-rs"
version = "0.1.0"
build = "build.rs"
[dependencies]
actix-service = "2.0.3"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.10.2"
actix-web-grants = "4.1.2"
actix-web-httpauth = "0.8.2"
actix-web-prom = "0.9.0"
anyhow = { version = "1.0.98", features = ["std"] }
awc = "3.6.0"
clap = { version = "4.5.37", features = ["derive", "env"] }
chrono = { version = "0.4.41", features = ["serde"] }
derive_more = "2.0.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
humantime = { version = "2.2.0" }
humantime-serde = "1.1.1"
itertools = "0.14.0"
log = "0.4.27"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
paperclip = { version = "0.9.5", features = ["v3", "chrono", "actix4", "swagger-ui"] }
paperclip-actix = "0.7.3"
passwords = "3.1.16"
prometheus = "0.14.0"
rust-argon2 = "2.1.0"
rusty_paseto = { version = "0.7.2", features = ["batteries_included", "v4_local"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shadow-rs = "1.1.1"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = { version = "0.27.1" }
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "json", "chrono"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
dashmap = "6.1.0"
[build-dependencies]
shadow-rs = "1.1.1"

[dev-dependencies]
testcontainers = { version = "0.24.0" }
mockall = "0.13.1"

